--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
 version: '3.8'
 services:
-  web:
+  gameconV1:
     image: nginx:alpine
     ports:
       - "8080:80"
+    volumes:
+      - ./2048-game:/usr/share/nginx/html
+      
+  gameconV2:
+    image: nginx:alpine
+    ports:
+      - "8000:80"
     volumes:
       - ./2048-game:/usr/share/nginx/html
